# seserde

./: Cargo.toml
eserde_axum/src/: details.rs
examples/extractor/: Cargo.toml
examples/extractor/src/: main.rs
